# ChangeLog for media-plugins/gst-plugins-libmms
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/ChangeLog,v 1.45 2010/12/20 17:21:10 hwoarang Exp $

  20 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-libmms-0.10.19.ebuild:
  Stable on amd64 wrt bug #346981

  20 Dec 2010; Thomas Kahle <tomka@gentoo.org>
  gst-plugins-libmms-0.10.19.ebuild:
  x86 stable per bug 346981

  04 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-libmms-0.10.18.ebuild:
  alpha/sparc stable wrt #324691

  05 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  gst-plugins-libmms-0.10.18.ebuild:
  ppc64 stable wrt #324691

*gst-plugins-libmms-0.10.19 (03 Aug 2010)

  03 Aug 2010; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-libmms-0.10.19.ebuild:
  Version bump. URI parsing related bug fixes

  01 Aug 2010; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-libmms-0.10.18.ebuild:
  Stable on alpha, bug #324691

  01 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-libmms-0.10.18.ebuild:
  x86 stable, bug 324691

  27 Jun 2010; <nixnut@gentoo.org> gst-plugins-libmms-0.10.18.ebuild:
  ppc stable #324691

  24 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-libmms-0.10.18.ebuild:
  Stable on amd64 wrt bug #324691

*gst-plugins-libmms-0.10.18 (19 Jun 2010)

  19 Jun 2010; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-libmms-0.10.18.ebuild:
  Version bump with a tiny error handling fix

  18 Apr 2010; <nixnut@gentoo.org> gst-plugins-libmms-0.10.17.ebuild:
  ppc stable #308379

  05 Apr 2010; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-libmms-0.10.17.ebuild:
  alpha/sparc stable wrt #308379

  24 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-libmms-0.10.17.ebuild:
  stable x86, bug 308379

  19 Mar 2010; Pacho Ramos <pacho@gentoo.org>
  gst-plugins-libmms-0.10.17.ebuild:
  amd64 stable, bug 308379
