@@ -1,10 +1,10 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/gst-plugins-libmms-0.10.19.ebuild,v 1.3 2010/12/20 17:21:10 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/gst-plugins-libmms-0.10.19.ebuild,v 1.4 2011/01/06 16:52:12 armin76 Exp $
 
 inherit gst-plugins-bad
 
-KEYWORDS="~alpha amd64 ~ppc ~ppc64 ~sparc x86"
+KEYWORDS="alpha amd64 ~ppc ~ppc64 sparc x86"
 IUSE=""
 
 RDEPEND=">=media-libs/gst-plugins-base-0.10.29
