@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-libmms
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/ChangeLog,v 1.45 2010/12/20 17:21:10 hwoarang Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/ChangeLog,v 1.46 2011/01/06 16:52:12 armin76 Exp $
+
+  06 Jan 2011; Raúl Porcel <armin76@gentoo.org>
+  gst-plugins-libmms-0.10.19.ebuild:
+  alpha/sparc stable wrt #346981
 
   20 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
   gst-plugins-libmms-0.10.19.ebuild:
